fixed search utility description font & draggable and close tabs on mobile & sidebar issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,6 @@
     overflow-y: auto !important;
 }
 .mantine-Menu-dropdown {
-    z-index: 1;
+    z-index: 1 !important;
 }
 
